fix(examples): use non minified build

--- a/examples/default.html
+++ b/examples/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>BLM Banner</title>
-    <script src="../dist/blm.min.js"></script>
+    <script src="../dist/blm.js"></script>
   </head>
   <body>
     Welcome to this awesome site!
